@@ -20,7 +20,7 @@ Name: rpm
 %define version @VERSION@
 Version: %{version}
 %{expand: %%define rpm_version %{version}}
-Release: 0.12
+Release: 0.13
 Group: System Environment/Base
 Source: ftp://wraptastic.org/pub/rpm-devel/rpm-%{rpm_version}.tar.gz
 License: GPL
@@ -505,6 +505,9 @@ exit 0
 %{__includedir}/popt.h
 
 %changelog
+* Fri Sep 30 2005 Jeff Johnson <jbj@jbj.org> 4.4.3-0.13
+- rpmluaFree: substitute globalLuaState for NULL arg.
+
 * Tue Sep 27 2005 Jeff Johnson <jbj@jbj.org> 4.4.3-0.12
 - add --dupes popt alias.
 - identify headers from whence they came.
